--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "hello-express",
+  "name": "ctfauth-example",
   "version": "0.0.1",
-  "description": "A simple Node app built on Express, instantly up and running.",
+  "description": "A demonstration of how CTFAuth works.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -19,7 +16,7 @@
     "node": "12.x"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
+    "url": "https://github.com/ParretLabs/ctfauth_example"
   },
   "license": "MIT",
   "keywords": [
